--- a/_config.yml
+++ b/_config.yml
@@ -1,67 +1,50 @@
-name:       Center for Spatial and Textual Analysis
-
-
-source:      .
-destination: ./_site
-plugins:     ./_plugins
-layouts:     ./_layouts
-include:     ['.htaccess']
-exclude:     []
-keep_files:  ['.git','.svn']
-timezone:    nil
-
-
-future:      true
-show_drafts: nil
-limit_posts: 0
-pygments:    true
-
-relative_permalinks: true
-
-permalink:     /:title
-paginate_path: 'page:num'
-
-markdown:      maruku
-markdown_ext:  markdown,mkd,mkdn,md
-textile_ext:   textile
-
-excerpt_separator: "\n\n"
-
-safe:        false
-host:        0.0.0.0
-port:        4000
-baseurl:     /
+title:            Center for Spatial and Textual Analysis
+tagline:          "CESTA"
+description:      "The Center for Spatial and Textual Analysis is a lab at Stanford University."
+# Site domain goes here. Leave localhost server or blank when working locally.
 url:
-lsi:         false
 
-maruku:
-  use_tex:    false
-  use_divs:   false
-  png_engine: blahtex
-  png_dir:    images/latex
-  png_url:    /images/latex
+# Owner/author information
+owner:
+  name:           Center for Spatial and Textual Analysis
+  email:
+  twitter:        "cesta"
+  github:         "cesta"
+  facebook:       "cesta"
+  # For Google Authorship https://plus.google.com/authorship
+  google_plus:    ""
 
-rdiscount:
-  extensions: []
+future:           true
+lsi:              false
+pygments:         true
+markdown:         kramdown
+# http://jekyllrb.com/docs/permalinks/
+permalink:        /:year/:month/:day/:title/
 
-redcarpet:
-  extensions: []
+# Internal pages/posts to include in top navigation
+links:
+  - title: People
+    url: /people/
+  - title: Labs &amp; Projects
+    url: /labs-projects/
+  - title: About
+    url: /about/
+  - title: Contact
+    url: /contact/
 
 kramdown:
   auto_ids: true
   footnote_nr: 1
   entity_output: as_char
   toc_levels: 1..6
-  smart_quotes: lsquo,rsquo,ldquo,rdquo
-  use_coderay: false
+  use_coderay: true
 
   coderay:
-    coderay_wrap: div
-    coderay_line_numbers: inline
+    coderay_line_numbers:
     coderay_line_numbers_start: 1
     coderay_tab_width: 4
     coderay_bold_every: 10
-    coderay_css: style
+    coderay_css: class
 
-redcloth:
-  hard_breaks: true
+include: [".htaccess"]
+exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "codekit-config.json", "Gemfile", "Gemfile.lock", "README.md", "node_modules", "Gruntfile.js", "package.json"]
