--- a/_team/nicole-coleman.yml
+++ b/_team/nicole-coleman.yml
@@ -3,11 +3,11 @@ bio:
 email:
 image:
   url:
-  title: Academic Technology Specialist, Humanities+Design Lab
+  title: Staff Director, Humanities+Design
   alt: Nicole Coleman
 layout: profile
 name: Nicole Coleman
-role: Academic Technology Specialist, Humanities+Design Lab
+role: Staff Director, Humanities+Design Lab
 short:
 twitter:
 type: staff
