Adding more team members

--- a/_team/jason-heppler.yml
+++ b/_team/jason-heppler.yml
@@ -13,4 +13,4 @@ short:
   "Jason is the Academic Technology Specialist for the Department of History and has extensive experience in digital history research methods, data visualization, and spatial history."
 twitter: jaheppler
 type: staff
-website: www.jasonheppler.org
+website: http://www.jasonheppler.org
