--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-name:                     "Crowdsourcing"
-sub-name:                 "Crowdsourcing for the Humanities"
+name:                     "Ockham"
+sub-name:                 "A Platform for Research"
 # is this a lab site or project site?
-type:                      project
+type:                     project
 markdown:                 redcarpet
 highlighter:              pygments
-description:              "A research project at the Center for Spatial and Textual Analysis (CESTA), Stanford University."
+description:              "Ockham is a static site platform for quickly publishing collaborative research in the humanities."
 category_dir :
 category_title_prefix :   ''
 category_title :          ''
@@ -12,7 +12,7 @@ google_id:                ''
 disqus:                   ''
 url:                      http://localhost:4000
 permalink:                /:year/:month/:day/:title/
-twitter:                  
+twitter:
 banner-img-url:           "https://googledrive.com/host/0B_L3W8DD67iAVUktdHIxN0RnUjA/"
 
 links:
