Removing extraneous files and normalizing

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,311 +1,11 @@
-- name: Allison Semrad
+- firstname: Allison
+  lastname: Semrad
   institution: stanford
   position: Research Assistant, CESTA
-  cs_role: assistant
+  role: assistant
   cs_role_description: ""
   cs_project: railroads
   cs_project_description: "Living with the Railroads"
   image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
   status: active
 
-- name: Annalise Lockhart
-  institution: stanford
-  position: Research Assistant, CESTA
-  cs_role: assistant
-  cs_role_description: ""
-  cs_project: railroads
-  cs_project_description: "Living with the Railroads"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: inactive
-
-- name: Anne Evered
-  institution: stanford
-  position: Research Assistant, CESTA
-  cs_role: assistant
-  cs_role_description: ""
-  cs_project: london
-  cs_project_description: "Emotions of London"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: "Benjamin Stone"
-  institution: stanford
-  position: "Curator, British and American History, Stanford Libraries"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project: bay
-  cs_project_description: "Year of the Bay"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: "Celena Allen"
-  institution: stanford
-  position: "GIS Specialist and Project Coordinator, Spatial History Project, CESTA"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project: railroads
-  cs_project_description: "Living with the Railroads"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Daniel Towns
-  institution: stanford
-  position: "Research Assistant, Railroads Project Lead, CESTA"
-  cs_role: assistant
-  cs_role_description: ""
-  cs_project: railroads
-  cs_project_description: "Living with the Railroads"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-
-- name: Dave Martens
-  institution: stanford
-  position: "Associate at Winston & Strawn, LLP"
-  cs_role: external
-  cs_role_description: ""
-  cs_project: railroads
-  cs_project_description: "Living with the Railroads"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Emma Budiansky
-  institution: stanford
-  position: "Research Assistant, CESTA"
-  cs_role: assistant
-  cs_role_description: ""
-  cs_project: railroads
-  cs_project_description: "Living with the Railroads"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Erik Steiner
-  institution: stanford
-  position: "Creative Director, Spatial History Project"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project: railroads
-  cs_project_description: "Living with the Railroads"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Franco Moretti
-  institution: stanford
-  position: "Director, Stanford Literary Lab; The Danily C. and Laura Louise Bell Professor in the Humanities, Stanford; Professor of English, Stanford"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project: london
-  cs_project_description: "Emotions of London"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Gabriel Wolfenstein
-  institution: stanford
-  position: "Project Manager and Researcher, Crowdsourcing, CESTA"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project:
-    - london
-    - general
-    - railroads
-    - bay
-  cs_project_description: "Crowdsourcing General"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Jason A. Heppler
-  institution: stanford
-  position: "Academic Technology Specialist, History"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project: general
-  cs_project_description: "Crowdsourcing General"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Jon Christensen
-  institution: stanford
-  position: "Senior Researcher, Institute of the Environment and Sustainability, UCLA"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project: bay
-  cs_project_description: "Year of the Bay"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Jon Voss
-  institution: historypin
-  position: "Historypin Strategic Partnership Director"
-  cs_role: external
-  cs_role_description: ""
-  cs_project:
-    - london
-    - bay
-    - railroads
-    - general
-  cs_project_description: "Crowdsourcing General"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Kerri Young
-  institution: historypin
-  position: "Project Officer, Historypin"
-  cs_role: external
-  cs_role_description: ""
-  cs_project: london
-  cs_project_description: "Emotions of London"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Lowry Yankwich
-  institution: stanford
-  position: "Research Assistant, CESTA"
-  cs_role: assistant
-  cs_role_description: ""
-  cs_project: london
-  cs_project_description: "Emotions of London"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: inactive
-
-- name: Mark Algee-Hewitt
-  institution: stanford
-  position: "Associate Research Director, Stanford Literary Lab, CESTA"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project: london
-  cs_project_description: "Emotions of London"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Matt Bryant
-  institution: stanford
-  position: "Office Manager, CESTA; Project Manager, CESTA"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project:
-    - general
-    - bay
-    - railroads
-  cs_project_description: "Crowdsourcing General"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Max Baumgarten
-  institution: historypin
-  position: "Project Officer, Historypin"
-  cs_role: external
-  cs_role_description: ""
-  cs_project: bay
-  cs_project_description: "Year of the Bay"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Nick Stanhope
-  institution: stanford
-  position: "CEO, We Are What We Do"
-  cs_role: external
-  cs_role_description: ""
-  cs_project:
-    - london
-    - bay
-    - general
-    - railroads
-  cs_project_description: "Crowdsourcing General"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Nicole Coleman
-  institution: stanford
-  position: "Staff Director, Humanities+Design"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project: general
-  cs_project_description: "Crowdsourcing General"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Sophia Paliza-Carre
-  institution: stanford
-  position: "Research Assistant, Year of the Bay Project Lead, CESTA"
-  cs_role: assistant
-  cs_role_description: ""
-  cs_project: bay
-  cs_project_description: "Year of the Bay"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: inactive
-
-- name: Richard White
-  institution: stanford
-  position: "Margaret Byrne Professor of American History"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project: railroads
-  cs_project_description: "Living with the Railroads"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Robert Bowdidge
-  institution: google
-  position: "Software Engineer, Google"
-  cs_role: external
-  cs_role_description: ""
-  cs_project: railroads
-  cs_project_description: "Living with the Railroads"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Ryan Heuser
-  institution: stanford
-  position: "Associate Research Director, Stanford Literary Lab, CESTA"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project: london
-  cs_project_description: "Emotions of London"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Thomas Smith
-  institution: project gado
-  position: "Founder and Project Manager, Project Gado"
-  cs_role: external
-  cs_role_description: ""
-  cs_project:
-    - bay
-    - railroads
-  cs_project_description: "Crowdsourcing General"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Van Tran
-  institution: stanford
-  position: Research Assistant, CESTA
-  cs_role: assistant
-  cs_role_description: ""
-  cs_project: london
-  cs_project_description: "Emotions of London"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
-
-- name: Varun Gupta
-  institution: stanford
-  position: "Research Assistant, CESTA"
-  cs_role: assistant
-  cs_role_description: ""
-  cs_project: london
-  cs_project_description: "Emotions of London"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: inactive
-
-- name: Zephyr Frank
-  institution: stanford
-  position: "Director, CESTA; Director, Spatial History Project; Associate Professor of History, Stanford"
-  cs_role: staff
-  cs_role_description: ""
-  cs_project:
-    - general
-    - london
-    - bay
-    - railroads
-  cs_project_description: "Crowdsourcing General"
-  image: http://hasslefreeliving.com/wp-content/uploads/2012/10/placeholder.gif
-  status: active
