--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+# Project or Lab name
 name:                     "Crowdsourcing"
 sub-name:                 "Crowdsourcing for the Humanities"
 # is this a lab site or project site?
@@ -13,7 +14,8 @@ disqus:                   ''
 url:                      http://localhost:4000
 permalink:                /:year/:month/:day/:title/
 twitter:                  
-banner-img-url:           "https://googledrive.com/host/0B_L3W8DD67iAVUktdHIxN0RnUjA/"
+#This is the base directory (cloud) where we share images
+img-url:           "https://googledrive.com/host/0B_L3W8DD67iAVUktdHIxN0RnUjA/"
 
 links:
   - title: Home
